Fix gap in hero image section

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -153,7 +153,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 450px;
+        width: 100%;
         height: 100%;
         z-index: 0;
     }
